--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Windows 98 Radio Station</title>
+  <title>internet child </title>
 
   <style>
     /* Windows 98 desktop styles */
@@ -17,48 +17,16 @@
       background-color: #008080; /* Windows 98 teal background color */
     }
 
-    .desktop {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 10px;
-      padding: 10px;
-    }
-
-    .icon {
-      width: 50px;
-      height: 50px;
-      background-color: #c0c0c0; /* Windows 98 icon background color */
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      border-radius: 5px;
-      text-align: center;
-      cursor: pointer;
-    }
-
-    .icon img {
-      width: 30px;
-      height: 30px;
-    }
-
-    .icon span {
-      font-size: 10px; /* Adjusted font size for app names */
-    }
-
-    h1 {
-      color: #fff; /* Windows 98 white text color */
-      text-align: center;
-    }
-
     /* Radio station app styles */
     #radioApp {
       text-align: center;
-      display: none; /* Initially hidden */
+      position: relative;
     }
 
     #backButton {
-      margin-top: 10px;
+      position: absolute;
+      top: 10px;
+      left: 10px;
       padding: 8px;
       cursor: pointer;
       background-color: #c0c0c0; /* Windows 98 button background color */
@@ -79,55 +47,13 @@
       margin-right: 5px;
     }
 
-    #musicPlayerContainer {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      background-color: #c0c0c0; /* Windows 98 button background color */
-      padding: 12px;
-      box-sizing: border-box;
-      display: none; /* Initially hidden */
-    }
-
-    #musicPlayer {
-      width: 100%; /* Take up the whole width */
-      background-color: inherit;
-      border: none;
-      color: #000; /* Windows 98 button text color */
-      font-family: 'Arial', sans-serif; /* Windows 98 font style */
-    }
-
-    .playlist-buttons {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin-top: 10px;
-    }
-
-    .playlist-buttons button {
-      margin: 5px;
-      padding: 8px;
-      cursor: pointer;
-      background-color: #c0c0c0; /* Windows 98 button background color */
-      border: none;
-      color: #000; /* Windows 98 button text color */
-      font-family: 'Arial', sans-serif; /* Windows 98 font style */
-    }
-
-    .playlist-buttons button:hover {
-      background-color: #808080; /* Windows 98 button hover background color */
-    }
-
-    /* Additional styles for dynamic elements */
     #visualizer-container {
       width: 100%;
       height: 100%;
       position: fixed;
       top: 0;
       left: 0;
-      z-index: -1; /* Send to the background */
-      pointer-events: none; /* Allow clicks to go through visualizer */
+      z-index: 1; /* Bring to the foreground */
     }
 
     #visualizer {
@@ -148,32 +74,61 @@
         transform: translate(calc(100vw - 50px), calc(100vh - 50px));
       }
     }
+
+    #musicPlayerContainer {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background-color: #c0c0c0; /* Windows 98 button background color */
+      padding: 12px;
+      box-sizing: border-box;
+      display: none; /* Initially hidden */
+      z-index: 1; /* Bring to the foreground */
+    }
+
+    #musicPlayer {
+      width: 100%; /* Take up the whole width */
+      background-color: inherit;
+      border: none;
+      color: #000; /* Windows 98 button text color */
+      font-family: 'Arial', sans-serif; /* Windows 98 font style */
+    }
+
+    #playlistButtons {
+      display: flex;
+      justify-content: center;
+      margin-top: 10px;
+    }
+
+    .playlist-buttons button {
+      margin: 5px;
+      padding: 8px;
+      cursor: pointer;
+      background-color: #c0c0c0; /* Windows 98 button background color */
+      border: none;
+      color: #000; /* Windows 98 button text color */
+      font-family: 'Arial', sans-serif; /* Windows 98 font style */
+    }
+
+    .playlist-buttons button:hover {
+      background-color: #808080; /* Windows 98 button hover background color */
+    }
+
+    #popUpLink {
+      position: absolute;
+      color: #fff;
+      font-size: 16px;
+      cursor: pointer;
+      display: none; /* Initially hidden */
+      z-index: 1; /* Bring to the foreground */
+    }
   </style>
 </head>
 <body>
-  <div class="desktop">
-    <!-- Mock Apps -->
-    <div class="icon" onclick="openApp('browser')">
-      <img src="Steve-Zondicons-Browser-Window.48.png" alt="Browser Icon">
-      <span>Browser</span>
-    </div>
-
-    <div class="icon" onclick="openApp('calculator')">
-      <img src="Pelfusion-Folded-Flat-Calculator.48.png" alt="Calculator Icon">
-      <span>Calculator</span>
-    </div>
-
-    <!-- Link to Radio Station Page -->
-    <a class="icon" href="#" onclick="openApp('radio')">
-      <img src="Icons8-Windows-8-Music-Radio-1.48.png" alt="Radio Icon">
-      <span>Radio</span>
-    </a>
-  </div>
-
   <div id="radioApp">
     <button id="backButton" onclick="backToMainPage()">
       <img src="https://img.icons8.com/material-rounded/24/000000/circled-left-2.png" alt="Back Arrow">
-      Back to Main Page
     </button>
 
     <div id="visualizer-container">
@@ -191,6 +146,8 @@
 
       <div class="playlist-buttons" id="playlistButtons"></div>
     </div>
+
+    <div id="popUpLink">Click me</div>
   </div>
 
   <script>
@@ -198,6 +155,7 @@
       var musicPlayer = document.getElementById("musicPlayer");
       var playlistButtonsContainer = document.getElementById("playlistButtons");
       var visualizerContainer = document.getElementById("visualizer-container");
+      var popUpLink = document.getElementById("popUpLink");
 
       var playlist = [
         {
@@ -205,18 +163,6 @@
           artist: 'Internet Child',
           url: 'dnb.mp3',
           cover: 'aOYd0JMr0CnEPDinqfKE--1--c3x2d.jpg',
-        },
-        {
-          name: 'Function',
-          artist: 'Internet Child',
-          url: 'kast.mp3',
-          cover: 'DJ logo Photo.jpg',
-        },
-        {
-          name: 'Throw some Ds',
-          artist: 'Internet Child',
-          url: 'Throw Some Ds- Track 1.mp3',
-          cover: 'DJ logo Photo.jpg',
         },
         // Add more "stations" following the same format
       ];
@@ -244,38 +190,29 @@
       if (!musicPlayer.paused) {
         startAnimation();
       }
+
+      // Set up pop-up link
+      popUpLink.addEventListener("click", function() {
+        window.open("https://soundcloud.com/intrntchld", "_blank");
+      });
+
+      // Show pop-up link randomly on the page
+      setInterval(function() {
+        var x = Math.random() * window.innerWidth;
+        var y = Math.random() * window.innerHeight;
+
+        popUpLink.style.left = x + "px";
+        popUpLink.style.top = y + "px";
+      }, 5000); // Change the position every 5 seconds
     });
 
-    function openApp(app) {
-      var radioApp = document.getElementById("radioApp");
-      var desktop = document.querySelector(".desktop");
-      var musicPlayerContainer = document.getElementById("musicPlayerContainer");
-      var visualizerContainer = document.getElementById("visualizer-container");
-
-      if (app === 'radio') {
-        radioApp.style.display = 'block';
-        desktop.style.display = 'none';
-        musicPlayerContainer.style.display = 'block';
-        visualizerContainer.style.zIndex = '-1'; // Send visualizer to the background
-        startAnimation();
-      } else if (app === 'browser') {
-        alert('Error: This is a simulation. The browser is not functional.');
-      } else if (app === 'calculator') {
-        alert('Error: This is a simulation. The calculator is not functional.');
-      }
-      // Add more app functionality as needed
-    }
-
     function backToMainPage() {
-      var radioApp = document.getElementById("radioApp");
-      var desktop = document.querySelector(".desktop");
       var musicPlayerContainer = document.getElementById("musicPlayerContainer");
       var visualizerContainer = document.getElementById("visualizer-container");
 
-      radioApp.style.display = 'none';
-      desktop.style.display = 'grid';
       musicPlayerContainer.style.display = 'none';
       stopAnimation();
+      visualizerContainer.style.display = 'none';
     }
 
     function startAnimation() {
@@ -285,7 +222,10 @@
         icon.style.display = "block";
       });
 
-      document.getElementById("visualizer-container").style.zIndex = "1"; // Bring visualizer to the foreground
+      var visualizer = document.getElementById("visualizer");
+      visualizer.style.display = 'block';
+
+      // Add logic to make the visualizer react to the different frequencies of the song
     }
 
     function stopAnimation() {
@@ -295,9 +235,9 @@
         icon.style.display = "none";
       });
 
-      document.getElementById("visualizer-container").style.zIndex = "-1"; // Send visualizer to the background
+      var visualizer = document.getElementById("visualizer");
+      visualizer.style.display = 'none';
     }
   </script>
 </body>
 </html>
-
