--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>internet child </title>
+  <title>Windows 98 Radio Station</title>
 
   <style>
     /* Windows 98 desktop styles */
@@ -29,16 +29,16 @@
       left: 10px;
       padding: 8px;
       cursor: pointer;
-      background-color: #c0c0c0; /* Windows 98 button background color */
+      background-color: #008080; /* Windows 98 teal background color */
       border: none;
-      color: #000; /* Windows 98 button text color */
+      color: #fff; /* Windows 98 white text color */
       font-family: 'Arial', sans-serif; /* Windows 98 font style */
       display: flex;
       align-items: center;
     }
 
     #backButton:hover {
-      background-color: #808080; /* Windows 98 button hover background color */
+      background-color: #006666; /* Darker teal on hover */
     }
 
     #backButton img {
@@ -59,7 +59,7 @@
     #visualizer {
       width: 100%;
       height: 100%;
-      background-color: transparent; /* Transparent background for visualizer */
+      /* Removed background-color for transparency */
     }
 
     .moving-icon {
@@ -80,18 +80,19 @@
       bottom: 0;
       left: 0;
       width: 100%;
-      background-color: #c0c0c0; /* Windows 98 button background color */
+      background-color: #008080; /* Windows 98 teal background color */
       padding: 12px;
       box-sizing: border-box;
       display: none; /* Initially hidden */
       z-index: 1; /* Bring to the foreground */
+      color: #fff; /* Windows 98 white text color */
     }
 
     #musicPlayer {
       width: 100%; /* Take up the whole width */
       background-color: inherit;
       border: none;
-      color: #000; /* Windows 98 button text color */
+      color: #fff; /* Windows 98 white text color */
       font-family: 'Arial', sans-serif; /* Windows 98 font style */
     }
 
@@ -105,23 +106,25 @@
       margin: 5px;
       padding: 8px;
       cursor: pointer;
-      background-color: #c0c0c0; /* Windows 98 button background color */
+      background-color: #008080; /* Windows 98 teal background color */
       border: none;
-      color: #000; /* Windows 98 button text color */
+      color: #fff; /* Windows 98 white text color */
       font-family: 'Arial', sans-serif; /* Windows 98 font style */
     }
 
     .playlist-buttons button:hover {
-      background-color: #808080; /* Windows 98 button hover background color */
+      background-color: #006666; /* Darker teal on hover */
     }
 
-    #popUpLink {
-      position: absolute;
-      color: #fff;
-      font-size: 16px;
+    /* Popup styles */
+    #popup {
+      position: fixed;
+      background-color: #008080; /* Windows 98 teal background color */
+      color: #fff; /* Windows 98 white text color */
+      padding: 10px;
       cursor: pointer;
-      display: none; /* Initially hidden */
       z-index: 1; /* Bring to the foreground */
+      display: none; /* Initially hidden */
     }
   </style>
 </head>
@@ -147,15 +150,17 @@
       <div class="playlist-buttons" id="playlistButtons"></div>
     </div>
 
-    <div id="popUpLink">Click me</div>
+    <!-- Popup content -->
+    <div id="popup" onclick="openLink()">
+      Click me
+    </div>
   </div>
 
   <script>
     document.addEventListener("DOMContentLoaded", function() {
       var musicPlayer = document.getElementById("musicPlayer");
       var playlistButtonsContainer = document.getElementById("playlistButtons");
-      var visualizerContainer = document.getElementById("visualizer-container");
-      var popUpLink = document.getElementById("popUpLink");
+      var popup = document.getElementById("popup");
 
       var playlist = [
         {
@@ -191,19 +196,8 @@
         startAnimation();
       }
 
-      // Set up pop-up link
-      popUpLink.addEventListener("click", function() {
-        window.open("https://soundcloud.com/intrntchld", "_blank");
-      });
-
-      // Show pop-up link randomly on the page
-      setInterval(function() {
-        var x = Math.random() * window.innerWidth;
-        var y = Math.random() * window.innerHeight;
-
-        popUpLink.style.left = x + "px";
-        popUpLink.style.top = y + "px";
-      }, 5000); // Change the position every 5 seconds
+      // Start popup animation
+      startPopupAnimation();
     });
 
     function backToMainPage() {
@@ -237,6 +231,24 @@
 
       var visualizer = document.getElementById("visualizer");
       visualizer.style.display = 'none';
+    }
+
+    function startPopupAnimation() {
+      var popup = document.getElementById("popup");
+      var maxX = window.innerWidth - popup.clientWidth;
+      var maxY = window.innerHeight - popup.clientHeight;
+
+      setInterval(function() {
+        // Randomly position the popup
+        var x = Math.floor(Math.random() * maxX);
+        var y = Math.floor(Math.random() * maxY);
+
+        popup.style.transform = "translate(" + x + "px, " + y + "px)";
+      }, 5000);
+    }
+
+    function openLink() {
+      window.open("https://soundcloud.com/intrntchld");
     }
   </script>
 </body>
