--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Internet child </title>
+  <title>Windows 98 Radio Station</title>
 
   <style>
     /* Windows 98 desktop styles */
@@ -55,10 +55,13 @@
     #radioApp {
       text-align: center;
       display: none; /* Initially hidden */
+      position: relative; /* Added relative positioning */
     }
 
     #backButton {
-      margin-top: 10px;
+      position: absolute;
+      top: 10px;
+      left: 10px;
       padding: 8px;
       cursor: pointer;
       background-color: #c0c0c0; /* Windows 98 button background color */
@@ -79,15 +82,44 @@
       margin-right: 5px;
     }
 
+    #visualizer-container {
+      width: 100%;
+      height: 100%;
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: 1; /* Bring visualizer to the foreground */
+      pointer-events: none; /* Allow clicks to go through visualizer */
+    }
+
+    #visualizer {
+      width: 100%;
+      height: 100%;
+      background-color: transparent; /* Transparent background for visualizer */
+    }
+
+    .moving-icon {
+      position: absolute;
+      animation: moveIcon 1s linear infinite alternate;
+      pointer-events: none; /* Allow clicks to go through icons */
+    }
+
+    @keyframes moveIcon {
+      to {
+        transform: translate(calc(100vw - 50px), calc(100vh - 50px));
+      }
+    }
+
     #musicPlayerContainer {
       position: fixed;
       bottom: 0;
       left: 0;
-      width: 100%;
+      width: calc(100% - 20px);
       background-color: #c0c0c0; /* Windows 98 button background color */
       padding: 12px;
       box-sizing: border-box;
       display: none; /* Initially hidden */
+      z-index: 0; /* Send music player to the background */
     }
 
     #musicPlayer {
@@ -117,36 +149,6 @@
 
     .playlist-buttons button:hover {
       background-color: #808080; /* Windows 98 button hover background color */
-    }
-
-    /* Additional styles for dynamic elements */
-    #visualizer-container {
-      width: 100%;
-      height: 100%;
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: -1; /* Send to the background */
-      pointer-events: none; /* Allow clicks to go through visualizer */
-    }
-
-    #visualizer {
-      width: 100%;
-      height: 100%;
-      background-color: transparent; /* Transparent background for visualizer */
-    }
-
-    .moving-icon {
-      position: absolute;
-      animation: moveIcon 1s linear infinite alternate;
-      display: none; /* Initially hidden */
-      pointer-events: none; /* Allow clicks to go through icons */
-    }
-
-    @keyframes moveIcon {
-      to {
-        transform: translate(calc(100vw - 50px), calc(100vh - 50px));
-      }
     }
   </style>
 </head>
@@ -255,7 +257,6 @@
         radioApp.style.display = 'block';
         desktop.style.display = 'none';
         musicPlayerContainer.style.display = 'block';
-        visualizerContainer.style.zIndex = '-1'; // Send visualizer to the background
         startAnimation();
       } else if (app === 'browser') {
         alert('Error: This is a simulation. The browser is not functional.');
@@ -283,8 +284,6 @@
         icon.style.animation = "moveIcon 1s linear infinite alternate";
         icon.style.display = "block";
       });
-
-      document.getElementById("visualizer-container").style.zIndex = "1"; // Bring visualizer to the foreground
     }
 
     function stopAnimation() {
@@ -293,8 +292,6 @@
         icon.style.animation = "none";
         icon.style.display = "none";
       });
-
-      document.getElementById("visualizer-container").style.zIndex = "-1"; // Send visualizer to the background
     }
   </script>
 </body>
