--- a/index.html
+++ b/index.html
@@ -46,16 +46,11 @@
       font-size: 10px; /* Adjusted font size for app names */
     }
 
-    h1 {
-      color: #fff; /* Windows 98 white text color */
-      text-align: center;
-    }
-
     /* Radio station app styles */
     #radioApp {
       text-align: center;
       display: none; /* Initially hidden */
-      position: relative; /* Added relative positioning */
+      position: relative; /* Position relative for absolute positioning of the back button */
     }
 
     #backButton {
@@ -70,7 +65,6 @@
       font-family: 'Arial', sans-serif; /* Windows 98 font style */
       display: flex;
       align-items: center;
-      z-index: 2; /* Bring arrow to the foreground */
     }
 
     #backButton:hover {
@@ -83,46 +77,15 @@
       margin-right: 5px;
     }
 
-    #visualizer-container {
-      width: 100%;
-      height: 100%;
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: 1; /* Bring visualizer to the foreground */
-      pointer-events: none; /* Allow clicks to go through visualizer */
-    }
-
-    #visualizer {
-      width: 100%;
-      height: 100%;
-      background-color: transparent; /* Transparent background for visualizer */
-    }
-
-    .moving-icon {
-      position: absolute;
-      animation: moveIcon 1s linear infinite alternate;
-      pointer-events: none; /* Allow clicks to go through icons */
-      display: none; /* Initially hidden */
-      z-index: 2; /* Bring moving icons to the foreground */
-    }
-
-    @keyframes moveIcon {
-      to {
-        transform: translate(calc(100vw - 50px), calc(100vh - 50px));
-      }
-    }
-
     #musicPlayerContainer {
       position: fixed;
       bottom: 0;
       left: 0;
-      width: calc(100% - 20px);
+      width: 100%;
       background-color: #c0c0c0; /* Windows 98 button background color */
       padding: 12px;
       box-sizing: border-box;
       display: none; /* Initially hidden */
-      z-index: 0; /* Send music player to the background */
     }
 
     #musicPlayer {
@@ -152,6 +115,36 @@
 
     .playlist-buttons button:hover {
       background-color: #808080; /* Windows 98 button hover background color */
+    }
+
+    /* Additional styles for dynamic elements */
+    #visualizer-container {
+      width: 100%;
+      height: 100%;
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: -1; /* Send to the background */
+      pointer-events: none; /* Allow clicks to go through visualizer */
+    }
+
+    #visualizer {
+      width: 100%;
+      height: 100%;
+      background-color: transparent; /* Transparent background for visualizer */
+    }
+
+    .moving-icon {
+      position: absolute;
+      animation: moveIcon 1s linear infinite alternate;
+      display: none; /* Initially hidden */
+      pointer-events: none; /* Allow clicks to go through icons */
+    }
+
+    @keyframes moveIcon {
+      to {
+        transform: translate(calc(100vw - 50px), calc(100vh - 50px));
+      }
     }
   </style>
 </head>
@@ -201,6 +194,7 @@
     document.addEventListener("DOMContentLoaded", function() {
       var musicPlayer = document.getElementById("musicPlayer");
       var playlistButtonsContainer = document.getElementById("playlistButtons");
+      var visualizerContainer = document.getElementById("visualizer-container");
 
       var playlist = [
         {
@@ -259,6 +253,7 @@
         radioApp.style.display = 'block';
         desktop.style.display = 'none';
         musicPlayerContainer.style.display = 'block';
+        visualizerContainer.style.zIndex = '-1'; // Send visualizer to the background
         startAnimation();
       } else if (app === 'browser') {
         alert('Error: This is a simulation. The browser is not functional.');
@@ -286,6 +281,8 @@
         icon.style.animation = "moveIcon 1s linear infinite alternate";
         icon.style.display = "block";
       });
+
+      document.getElementById("visualizer-container").style.zIndex = "1"; // Bring visualizer to the foreground
     }
 
     function stopAnimation() {
@@ -294,6 +291,8 @@
         icon.style.animation = "none";
         icon.style.display = "none";
       });
+
+      document.getElementById("visualizer-container").style.zIndex = "-1"; // Send visualizer to the background
     }
   </script>
 </body>
