--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>internet child</title>
+  <title>Windows 98 Radio Station</title>
 
   <style>
     /* Windows 98 desktop styles */
@@ -15,6 +15,7 @@
       justify-content: center;
       height: 100vh;
       background-color: #008080; /* Windows 98 teal background color */
+      overflow: hidden; /* Hide overflow for moving icons */
     }
 
     .desktop {
@@ -54,7 +55,7 @@
     }
 
     #backButton {
-      position: absolute;
+      position: fixed;
       top: 10px;
       left: 10px;
       padding: 8px;
@@ -63,8 +64,7 @@
       border: none;
       color: #000; /* Windows 98 button text color */
       font-family: 'Arial', sans-serif; /* Windows 98 font style */
-      display: flex;
-      align-items: center;
+      z-index: 2; /* Bring the arrow to the foreground */
     }
 
     #backButton:hover {
@@ -77,47 +77,6 @@
       margin-right: 5px;
     }
 
-    #musicPlayerContainer {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      background-color: #c0c0c0; /* Windows 98 button background color */
-      padding: 12px;
-      box-sizing: border-box;
-      display: none; /* Initially hidden */
-    }
-
-    #musicPlayer {
-      width: 100%; /* Take up the whole width */
-      background-color: inherit;
-      border: none;
-      color: #000; /* Windows 98 button text color */
-      font-family: 'Arial', sans-serif; /* Windows 98 font style */
-    }
-
-    .playlist-buttons {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin-top: 10px;
-    }
-
-    .playlist-buttons button {
-      margin: 5px;
-      padding: 8px;
-      cursor: pointer;
-      background-color: #c0c0c0; /* Windows 98 button background color */
-      border: none;
-      color: #000; /* Windows 98 button text color */
-      font-family: 'Arial', sans-serif; /* Windows 98 font style */
-    }
-
-    .playlist-buttons button:hover {
-      background-color: #808080; /* Windows 98 button hover background color */
-    }
-
-    /* Additional styles for dynamic elements */
     #visualizer-container {
       width: 100%;
       height: 100%;
@@ -136,9 +95,10 @@
 
     .moving-icon {
       position: absolute;
-      animation: moveIcon 1s linear infinite alternate;
+      animation: moveIcon 5s linear infinite alternate;
       display: none; /* Initially hidden */
       pointer-events: none; /* Allow clicks to go through icons */
+      z-index: 1; /* Bring the icons to the foreground */
     }
 
     @keyframes moveIcon {
@@ -278,7 +238,7 @@
     function startAnimation() {
       // Start moving icons and show visualizer
       document.querySelectorAll(".moving-icon").forEach(function(icon) {
-        icon.style.animation = "moveIcon 1s linear infinite alternate";
+        icon.style.animation = "moveIcon 5s linear infinite alternate";
         icon.style.display = "block";
       });
 
